--- a/ConfigData/eureka-server.yml
+++ b/ConfigData/eureka-server.yml
@@ -8,6 +8,6 @@ eureka:
     hostname: localhost
   client:
     registerWithEureka: false
-    fetchRegistry: false
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
