--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
           uri: https://github.com/TomasArrinda/BackEndII
           default-label: main
           force-pull: true
-          search-paths: configs
+          search-paths: /ConfigData/
