--- a/eureka-server/src/main/resources/boostrap.yml
+++ b/eureka-server/src/main/resources/boostrap.yml
@@ -1,6 +1,12 @@
+server:
+  port: 8761
 spring:
   application:
-    name: ms-eureka-server
+    name: eureka-server
   cloud:
     config:
       uri: http://localhost:8888
+eureka:
+  client:
+    fetchRegistry: false
+    registerWithEureka: false
