--- a/ConfigData/eureka-server.yml
+++ b/ConfigData/eureka-server.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${PORT:8761}
+  port: 8761
 spring:
   application:
     name: eurekaServer
@@ -10,4 +10,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:8761/eureka
